--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Название документа (страницы)</title>
-    <style>
-      h1 {
-        color: red;
-      }
-    </style>
+      <link rel = "stylesheet" href = "style.css">
   </head>
   <body>
-    <h1>Заголовок страницы</h1>
-    <p>Параграф текста</p>
+      <h1>Заголовок</h1>
   </body>
 </html>
