--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       <link rel = "stylesheet" href = "style.css">
   </head>
   <body>
-      <h1>Заголовок</h1>
+      <h1 class = "title page-title"> Заголовок</h1>
   </body>
 </html>
