--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
       <h1 class = "title page-title"> Заголовок</h1>
+      <p>здесь могла быть ваша реклама,ня</p>
   </body>
 </html>
