--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
       <link rel = "stylesheet" href = "style.css">
   </head>
   <body>
-      <h1 class = "title page-title"> Заголовок</h1>
+    <header>
+        <a href="index.html" class="page-header_logo">
+            <ing class="page-header_logo-icon"/> 
+        </a>
+        <nav class = "page-header_nav">
+            <a href = "#" class ="page-header_nav-link"></a>
+        </nav>
+        <button type = "button" class = page-header_btn--red>Кнопка красная</button>
+    </header>
+      <h1 id ='title'class = "page-title" style="color:green"> Заголовок</h1>
       <p>здесь могла быть ваша реклама,ня</p>
   </body>
 </html>
