--- a/index.html
+++ b/index.html
@@ -1,19 +1,90 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-      <link rel = "stylesheet" href = "style.css">
-  </head>
-  <body>
-    <header>
-        <a href="index.html" class="page-header_logo">
-            <ing class="page-header_logo-icon"/> 
-        </a>
-        <nav class = "page-header_nav">
-            <a href = "#" class ="page-header_nav-link"></a>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Сайт мероприятий</title>
+</head>
+<body>
+
+    <!-- Шапка сайта -->
+    <header class="page-header">
+        <div class="logo">Логотип</div>
+        <nav>
+            <ul>
+                <li><a href="#home">Главная</a></li>
+                <li><a href="#events">Мероприятия</a></li>
+            </ul>
         </nav>
-        <button type = "button" class = page-header_btn--red>Кнопка красная</button>
     </header>
-      <h1 id ='title'class = "page-title" style="color:green"> Заголовок</h1>
-      <p>здесь могла быть ваша реклама,ня</p>
-  </body>
+
+    <!-- Карточка мероприятия -->
+    <div class="event-card">
+        <img src="event.jpg" alt="Мероприятие">
+        <h2>Название мероприятия</h2>
+        <p>Описание мероприятия.</p>
+        <button>Забронировать</button>
+    </div>
+
+    <!-- Сетка мероприятий -->
+    <section class="listing">
+        <h1 class="section-title">Список мероприятий</h1>
+        <div class="event-list">
+            <!-- Повторить карточки мероприятий -->
+            <div class="event-card">...</div>
+            <div class="event-card">...</div>
+        </div>
+    </section>
+
+    <!-- Блок резервирования -->
+    <section class="reserve">
+        <h1>Забронировать</h1>
+        <div class="reserve-grid">
+            <div class="reserve-item">Опция 1</div>
+            <div class="reserve-item">Опция 2</div>
+        </div>
+    </section>
+
+</body>
 </html>
+/* styles.css */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.page-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #f8f8f8;
+}
+
+.event-card {
+    border: 1px solid #ccc;
+    padding: 15px;
+    margin: 10px;
+    width: 200px;
+}
+
+.listing {
+    padding: 20px;
+}
+
+.section-title {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.reserve {
+    padding: 20px;
+}
+
+.reserve-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
