--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
-      <link rel = "stylesheet" href = "style.css">
+    <meta charset="UTF-8" />
+    <title>Lenni Art</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
-  <body>
-    <header>
-        <a href="index.html" class="page-header_logo">
-            <ing class="page-header_logo-icon"/> 
-        </a>
-        <nav class = "page-header_nav">
-            <a href = "#" class ="page-header_nav-link"></a>
-        </nav>
-        <button type = "button" class = page-header_btn--red>Кнопка красная</button>
-
-    </header>
-      <h1 id ='title'class = "page-title" style="color:green"> Заголовок</h1>
-      <p>здесь могла быть ваша реклама</p>
+  <body class="body">
+    <header class="page-header"></header>
+    <main class="main"></main>
+    <footer class="page-footer"></footer>
   </body>
 </html>
