--- a/index.html
+++ b/index.html
@@ -10,4 +10,17 @@
     <main class="main"></main>
     <footer class="page-footer"></footer>
   </body>
+  <header class="page-header">
+    <div class="page-header__container">
+      <a href="index.html" class="page-header__logo">
+        <img src="logo.jpg" alt="logo" class="page-header__logo-icon">
+      </a>
+      <nav class="page-header__nav">
+        <a href="#" class="page-header__nav-link">Мероприятия</a>
+        <a href="#" class="page-header__nav-link">Блог</a>
+        <a href="#" class="page-header__nav-link">О нас</a>
+        <a href="#" class="page-header__nav-link">Контакты</a>
+      </nav>
+    </div>
+  </header>
 </html>
