--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <title>Lenni Art</title>
     <link rel="stylesheet" href="styles/styles.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body class="body">
     <header class="page-header"></header>
@@ -21,6 +24,11 @@
         <a href="#" class="page-header__nav-link">О нас</a>
         <a href="#" class="page-header__nav-link">Контакты</a>
       </nav>
+    </div>
+    <div class="page-header__right-block">
+      <a href="#" class="btn page-header__user-btn">
+        Войти
+      </a>
     </div>
   </header>
 </html>
